--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,12 @@
     box-sizing: border-box;
 }
 
+html {
+    box-sizing: border-box;
+    height: 100%;
+    scroll-behavior: smooth;
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -55,4 +61,15 @@ body {
 img {
     max-width: 100%;
     height: auto;
+}
+
+
+/* CONTAINER */
+.container {
+    width: 100%;
+    max-width: 1146px;
+    padding-left: 16px;
+    padding-right: 16px;
+    margin-left: auto;
+    margin-right: auto;
 }
