--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@
     /* transition */
     --transition-duration: 0.3s;
 }
-
+*,
 *::before,
 *::after {
     box-sizing: border-box;
@@ -81,9 +81,9 @@ img {
 /* CONTAINER */
 .container {
     width: 100%;
-    max-width: 1146px;
-    padding-left: 16px;
-    padding-right: 16px;
+    max-width: 1194px;
+    padding-left: 40px;
+    padding-right: 40px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -195,13 +195,55 @@ img {
     margin-top: 0;
     margin-bottom: 36px;
     font-family: var(--heading-font-family);
+    font-weight: 600;
     font-size: 80px;
     line-height: 1;
     color: #fff;
     text-align: center;
 }
 
+.hero__img {
+    display: block;
+}
+
 .hero__button {
     margin-bottom: 50px;
+}
 
+@media screen and (max-width: 768px) {
+    .site-header-hero-wrapper {
+        padding-top: 36px;
+    }
+
+    .site-header__container {
+        margin-bottom: 60px;
+    }
+
+    .hero__heading {
+        max-width: 465px;
+        margin-bottom: 40px;
+        font-size: 60px;
+        line-height: 1;
+    }
+}
+
+
+@media screen and (max-width: 500px) {
+    .container {
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+
+    .site-header__container {
+        margin-bottom: 64px;
+    }
+
+    .hero__heading {
+        max-width: 80%;
+        font-size: 50px;
+    }
+
+    .hero__button {
+        margin-bottom: 60px;
+    }
 }
