--- a/css/styles.css
+++ b/css/styles.css
@@ -294,6 +294,19 @@ img {
     color: #fff;
 }
 
+.test-cta__box::after {
+    position: absolute;
+    z-index: 1;
+    right: 96px;
+    bottom: -24px;
+    width: 173px;
+    height: 137px;
+    background: url(../imgs/circle.svg) no-repeat center center;
+    background-size: contain;
+    transform: rotate(-145deg);
+    content: "";
+}
+
 .test-cta__picture {
     display: block;
 }
@@ -379,6 +392,42 @@ img {
         line-height: 28px;
     }
 
+    .test-cta__img {
+        width: 281px;
+        height: 281px;
+        right: auto;
+        left: -175px;
+        top: -150px;
+    }
+
+}
+
+@media screen and (max-width: 900px) {
+    .test-cta {
+        padding-top: 250px;
+        padding-bottom: 40px;
+    }
+
+    .test-cta__inner {
+        max-width: 600px;
+    }
+
+    .test-cta__box {
+        padding: 48px 56px 56px;
+    }
+
+    .test-cta__heading {
+        font-size: 48px;
+        line-height: 56px;
+        margin-bottom: 24px;
+    }
+
+    .test-cta__description {
+        font-size: 16px;
+        line-height: 28px;
+        margin-bottom: 24px;
+    }
+    
 }
 
 @media screen and (max-width: 768px) {
@@ -395,6 +444,48 @@ img {
         margin-bottom: 40px;
         font-size: 60px;
         line-height: 1;
+    }
+
+    .test-cta__inner {
+        width: 514px;
+    }
+    
+    .test-cta__box::after {
+        right: 36px;
+        bottom: -68px;
+    }
+}
+
+
+@media screen and (max-width: 700px) {
+    .test-cta {
+        padding-top: 328px;
+        padding-bottom: 54px;
+    }
+    
+    .test-cta__inner {
+        max-width: 100%;
+    }
+
+    .test-cta__img {
+        top: -228px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    .test-cta__box {
+        padding: 32px;
+        text-align: center;
+    }
+
+    .test-cta__box::after {
+        display: none;
+    }
+
+    .test-cta__heading {
+        margin-bottom: 16px;
+        font-size: 32px;
+        line-height: 48px;
     }
 }
 
@@ -438,5 +529,13 @@ img {
 
     .feature__inner {
         text-align: center;
+    }
+}
+
+
+@media screen and (max-width: 350px) {
+    .test-cta__img {
+        width: 250px;
+        height: 250px;
     }
 }
