--- a/css/styles.css
+++ b/css/styles.css
@@ -206,7 +206,7 @@ img {
 /* SITE-HEADER-HERO-WRAPPER */
 .site-header-hero-wrapper {
     position: relative;
-    z-index: 1;
+    z-index: 2;
     padding-top: 56px;
     padding-bottom: 255px;
     background-color: var(--dark-purple);
@@ -221,12 +221,13 @@ img {
     top: 100%;
     z-index: 1;
     width: 100%;
-    height: 68px;
-    background-image: url(../imgs/hero__bc.svg);
-    background-size: 100%;
+    height: 108px;
+    background-image: url("../imgs/hero-ghost-addon.svg");
     background-repeat: no-repeat;
-    content: '';
+    background-size: 100%;
+    content: "";
 }
+
 
 
 /* SITE-HEADER */
@@ -266,9 +267,25 @@ img {
 
 /* FEATURE  */
 .features {
-    padding-top: 255px;
-    padding-bottom: 170px;
+    position: relative;
+    z-index: 1;
+    padding-top: 327px;
+    padding-bottom: 103px;
+    margin-bottom: 40px;
     background-color: var(--ghost-white);
+}
+
+.features::after {
+    position: absolute;
+    left: 0;
+    top: 100%;
+    z-index: 1;
+    width: 100%;
+    height: 108px;
+    background-image: url("../imgs/feature-ghost-wihte-addon.svg");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    content: "";
 }
 
 .features__list {
@@ -533,11 +550,11 @@ img {
 @media screen and (max-width: 768px) {
     .site-header-hero-wrapper {
         padding-top: 36px;
+        padding-bottom: 170px;
     }
 
     .site-header-hero-wrapper::after {
         height: 36px;
-        bottom: -176px;
     }
 
     .site-header__container {
@@ -553,6 +570,10 @@ img {
 
     .hero__img {
         width: 480px;
+    }
+
+    .features::after {
+        height: 36px;
     }
 
     .test-cta__inner {
@@ -613,7 +634,7 @@ img {
     }
 
     .site-header-hero-wrapper::after {
-        height: 18px;
+        height: 30px;
     }
 
     .site-header__container {
@@ -633,6 +654,10 @@ img {
     .features {
         padding-top: 155px;
         padding-bottom: 70px;
+    }
+
+    .features::after {
+        height: 30px;
     }
 
     .features__item:not(:last-child) {
